components/build-suite-test-component-git-source-hlza/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: build-suite-test-application-abqm
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: build-suite-test-component-git-source-hlza
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elbuild-suite-test-component-git-source-hlza
  namespace: build-templates-e2e
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-build-suite-test-component-git-source-hlza
    weight: null
status: {}
